[package]
name = "blobstore-vault"
version = "0.1.0"
authors = ["The wasmCloud Team"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"
vaultrs = "0.7"
wasmcloud-provider-sdk = { git = "https://github.com/wasmCloud/wasmCloud.git", rev = "1089ca1", features = [
    "otel",
] }
